--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <html>
+  <style>
+    div {
+          width:300px;
+          margin:auto;
+          background-color:#FFF4A3;
+    }
+    
+  </style>
 <body>
-<h1> It Works! </h1>
-<h2> Tomorrow will be Better </h2>
-<p> Something Something </p>
+  <div>
+    <h1> It Works! </h1>
+    <h2> Tomorrow will be Better </h2>
+    <p> Something Something </p>
+    </div>
 </body>
 </html>
