--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div>
     <h1> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
-    <p> Something Something </p>
+    <p> Something Something v0.1</p>
     </div>
 </body>
 </html>
