--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html>
   <style>
-    div {
-          width:300px;
+    div.main {
+          width:100%;
           margin:auto;
           background-color:#FFF4A3;
+          float:left;
     }
     
   </style>
 <body>
-  <div>
+  <div class="main">
     <h1> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
-    <p> Something Something v0.1</p>
+    <p> Something Something v0.2</p>
     </div>
 </body>
 </html>
