--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <html>
   <style>
-    div.main {
+    .main {
+      display: flex;
+    }
+    .main > div {
           width:100%;
           margin:auto;
           background-color:#FFF4A3;
           float:left;
-    }
-    
+    } 
   </style>
 <body>
   <div class="main">
     <h1> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
-    <p> Something Something v0.2</p>
+    <p> Something Something v0.3</p>
     </div>
 </body>
 </html>
