--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <html>
   <style>
-    .main {
-      display: flex;
-    }
-    .main > div {
+    div.main {
+          display: flex;
           width:100%;
           margin:auto;
           background-color:#FFF4A3;
           float:left;
     } 
+    h1.header1 {
+      background-color: lightblue;
+      color: orange;
+      padding: 40px;
+      text-align: center;
+    }
   </style>
 <body>
   <div class="main">
-    <h1> It Works! </h1>
+    <h1 id="header1"> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
     <p> Something Something v0.3</p>
     </div>
