--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
   <style>
-    div.main {
+    .main {
           display: flex;
-          width:100%;
-          margin:auto;
-          background-color:#FFF4A3;
-          float:left;
+         
     } 
-    h1.header1 {
+    .header {
+      width:100%;
+      margin:auto;
+      background-color:#FFF4A3;
+      float:left;
+     }
+    .h1style {
       background-color: lightblue;
       color: orange;
       padding: 40px;
@@ -16,9 +19,11 @@
   </style>
 <body>
   <div class="main">
-    <h1 id="header1"> It Works! </h1>
+    <div class="header">
+    <h1 id="h1style"> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
-    <p> Something Something v0.3</p>
+    <p> Something Something v0.4</p>
     </div>
+  </div>
 </body>
 </html>
