--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <style>
-    .main {
+    .body {
           display: flex;
          
     } 
@@ -11,14 +11,13 @@
       float:left;
      }
     .h1style {
-      background-color: lightblue;
-      color: orange;
+      color: Blue;
       padding: 40px;
       text-align: center;
     }
   </style>
 <body>
-  <div class="main">
+  <div class="body">
     <div class="header">
     <h1 id="h1style"> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
