--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       float:left;
      }
     .h1style {
-      color: Blue;
+      color: #03045E;
       padding: 40px;
       text-align: center;
     }
