--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <html>
+    <!-- ======= Paleete de Cores ======= -->
+    <!--color:#03045E; Federal Blue -->
+    <!--color:#0077B6; Honolulu Blue -->
+    <!--color:#00B4D8; Pacific Cyan -->
+    <!--color:#90E0EF; Non Photo Blue -->
+    <!--color:#CAF0F8; Light cyan -->
+  
   <style>
     .body {
-          display: flex;
-         
+      display: flex;    
     } 
     .header {
       width:100%;
       margin:auto;
-      background-color:#FFF4A3;
+      background-color:#CAF0F8;
       float:left;
      }
     .h1style {
       color: #03045E;
-      padding: 40px;
+      padding: 60px;
       text-align: center;
     }
+
+    
   </style>
-<body>
+<body styke="background-color:#CAF0F8;">
   <div class="body">
     <div class="header">
     <h1 id="h1style"> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
-    <p> Something Something v0.4</p>
+    <p> Something Something v0.5</p>
     </div>
   </div>
 </body>
