--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <!--color:#CAF0F8; Light cyan -->
   
   <style>
-    .body {
-      display: flex;    
+    .all {
+        display: flex;    
     } 
     .header {
-      width:100%;
-      margin:auto;
-      background-color:#CAF0F8;
-      float:left;
+        width:100%;
+        margin:auto;
+        background-color:#CAF0F8;
+        float:left;
      }
     .h1style {
-      color: #03045E;
-      padding: 60px;
-      text-align: center;
+        padding: 60px;
+        text-align: center;
+        color: #03045E;
     }
 
     
   </style>
-<body styke="background-color:#CAF0F8;">
-  <div class="body">
+<body style="background-color:powderblue;"> 
+    <div class="all">
     <div class="header">
     <h1 id="h1style"> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
-    <p> Something Something v0.5</p>
+    <p> Something Something v0.6</p>
     </div>
   </div>
 </body>
