--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .header {
         width:100%;
         margin:auto;
-        background-color:#CAF0F8;
+        background-color:#0077B6;
         float:left;
      }
     .h1style {
@@ -24,7 +24,7 @@
 
     
   </style>
-<body style="background-color:powderblue;"> 
+<body style="background-color:#CAF0F8;"> 
     <div class="all">
     <div class="header">
     <h1 id="h1style"> It Works! </h1>
