--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     
   </style>
-<body style="background-color:#CAF0F8;"> 
+<body style="background-color:powderblue;">
     <div class="all">
     <div class="header">
     <h1 id="h1style"> It Works! </h1>
