--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .header {
         width:100%;
         margin:auto;
-        background-color:#0077B6;
+        background-color:#90E0EF;
         float:left;
      }
     .h1style {
@@ -24,12 +24,12 @@
 
     
   </style>
-<body style="background-color:powderblue;">
+<body style="background-color:DodgerBlue;">
     <div class="all">
     <div class="header">
     <h1 id="h1style"> It Works! </h1>
     <h2> Tomorrow will be Better </h2>
-    <p> Something Something v0.6</p>
+    <p> Something Something v0.7</p>
     </div>
   </div>
 </body>
