--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         background-color:#90E0EF;
         float:left;
      }
+    .header10px {
+        width:90%;
+        margin:10px;
+        background-color:Tomato;
+        float:left;
+    }
     .h1style {
         padding: 60px;
         text-align: center;
@@ -27,9 +33,11 @@
 <body style="background-color:DodgerBlue;">
     <div class="all">
     <div class="header">
-    <h1 id="h1style"> It Works! </h1>
-    <h2> Tomorrow will be Better </h2>
-    <p> Something Something v0.7</p>
+        <div class="header10px">
+                <h1 id="h1style"> It Works! </h1>
+                <h2> Tomorrow will be Better </h2>
+                <p> Something Something v0.8</p>
+        </div>
     </div>
   </div>
 </body>
