--- a/index.html
+++ b/index.html
@@ -7,36 +7,42 @@
     <!--color:#CAF0F8; Light cyan -->
   
   <style>
+	body {
+	margin:0px;
+	padding:0px;
+	background-color:#CAF0F8;
+	}
     .all {
-        display: flex;    
-    } 
+        display: flex; 
     .header {
         width:100%;
         margin:auto;
         background-color:#90E0EF;
-        float:left;
+        float:center;
      }
     .header10px {
-        width:100%;
-        margin:10px;
-        background-color:Tomato;
-        float:left;
+        width:30%;
+        border-width:10px;
+		border-style:solid;
+		border-color:black;
+		border-radius:20px;
+        background-color:#00B4D8;
+        float:center;
     }
     .h1style {
-        padding: 60px;
         text-align: center;
         color: #03045E;
     }
 
     
   </style>
-<body style="background-color:DodgerBlue;">
+<body>
     <div class="all">
     <div class="header">
         <div class="header10px">
                 <h1 id="h1style"> It Works! </h1>
                 <h2> Tomorrow will be Better </h2>
-                <p> Something Something v0.8</p>
+                <p> Something Something v0.9</p>
         </div>
     </div>
   </div>
