--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Deodato.pt - Soluções para pequenas empresas</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Soluções online para pequenas empresas: registo de domínio, Google Workspace, Microsoft 365, criação de sites otimizados e SEO profissional.">
+  <meta name="keywords" content="soluções online, pequenas empresas, criação de sites, SEO, Google Workspace, Microsoft 365, registo de domínio, optimização mobile, serviços digitais">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
