--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="pt">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-VDZEL82LH5"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+	gtag('config', 'G-VDZEL82LH5');
+	</script>
+	<!-- End Google tag (gtag.js) -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Deodato.pt - Soluções para pequenas empresas</title>
